# Real-time-Financial-Market-Data-Pipeline

./: .gitignore  .helmignore  LICENSE  README.md  helmfile.yaml
charts/ingestion/: Chart.yaml  values.yaml
charts/ingestion/app/: app.py  pyproject.toml  tickers.json
charts/ingestion/app/examples/: APPL.json  BTC-USD.json  GBPX.json  VUAG.L.json
charts/ingestion/templates/: ingestion-configmap.yaml  ingestion-deployment.yaml
charts/monitoring/: Chart.yaml  values.yaml
charts/processing/: Chart.yaml  values.yaml
charts/processing/config/: benthos-config.yaml
charts/processing/templates/: benthos-config-configmap.yaml
charts/storage/: Chart.yaml  values.yaml
charts/storage/sql/: init.sql
charts/storage/templates/: postgres-init-sql-configmap.yaml
charts/streaming/: Chart.yaml  values.yaml
charts/streaming/scripts/: add_schemas.py
charts/streaming/scripts/schemas/: crypto-values.avsc  currency-values.avsc  stocks-values.avsc
charts/streaming/templates/: add-schemas-job.yaml  schemas-configmap.yaml
docs/: LICENSE  README.md  pipeline.drawio
scripts/: apply_all.sh  apply_fetcher.sh  apply_monitoring.sh  restart_helm.sh  restart_postgres.sh  update_deps.sh
values/: ingestion.yaml.gotmpl  monitoring.yaml.gotmpl  processing.yaml.gotmpl  storage.yaml.gotmpl  streaming.yaml.gotmpl
values/environments/: default.yaml  rpi.yaml
