[project]
name = "ingestion-app"
version = "0.1.0"
description = "For fetching API data for financial markets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "avro>=1.12.0",
    "confluent-kafka[avro]>=2.7.0",
    "httpx>=0.28.1",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "yfinance>=0.2.65",
]
